<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#d3d3d3"
    android:layout_width="match_parent"
    android:padding="@dimen/layout_padding"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/layout_email"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:id="@+id/edittextemail"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email"
        android:layout_marginTop="8dp"
        android:id="@+id/btn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btn_delete"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete"
        android:layout_marginTop="8dp"
        android:id="@+id/btn_show_data"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btn_show"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_data" />


</androidx.constraintlayout.widget.ConstraintLayout>